--- a/Css/style.css
+++ b/Css/style.css
@@ -51,6 +51,7 @@ p{
   background-repeat: no-repeat;
   background-size: 100% 100%;
   position: relative;
+  border-bottom: 1px solid wheat;
 }
 
 
