--- a/Css/Index.css
+++ b/Css/Index.css
@@ -193,7 +193,7 @@ p{
 }
 
 .about-text .head h3{
-  margin-top: 20px;
+  margin: 40px 0;
   text-align: center;
   font-size: 25px;
 }
@@ -585,7 +585,7 @@ a:hover, a:focus {
 }
 
 .about-text .head h3{
-  margin-top: 20px;
+  margin: 40px 0;
   text-align: center;
   font-size: 20px;
 }
@@ -631,7 +631,7 @@ a:hover, a:focus {
   
   
   .serviceoffer{
-  height: 100vh;
+  height: 90vh;
   padding: 50px 0;
   margin: 50px 0;
   color: white;
